# dalebot

./: .coveragerc  .env.example  .gitignore  Dockerfile  MANIFEST.md  Makefile  README.md  celerybeat-schedule  compose.prod.yml  compose.yml  docker-compose.override.yml  mypy.ini  pyproject.toml  todo.md
.github/workflows/: ci.yml
agents/: README.md  agents.md  automated-testing.md  backend-django.md  code-reviewer.md  database-postgresql.md  devops.md  documentation-maintainer.md  frontend-htmx.md  global-rules.md  performance.md  product-manager.md  qa-engineer.md  security-engineer.md  software-architect.md  whatsapp-integration.md
apps/accounts/: README.md  admin.py  managers.py  middleware.py  models.py  permissions.py  selectors.py  services.py
apps/analytics/: README.md  admin.py  models.py  selectors.py  services.py  tasks.py
apps/appointments/: README.md  admin.py  models.py  selectors.py  services.py  tasks.py
apps/audit/: README.md  admin.py  models.py  selectors.py  services.py
apps/availability/: README.md  admin.py  models.py  selectors.py  services.py
apps/billing/: README.md  admin.py  models.py  services.py
apps/businesses/: README.md  admin.py  models.py  onboarding.py  selectors.py  services.py
apps/conversations/: README.md  admin.py  models.py  services.py
apps/customers/: README.md  admin.py  models.py  (+2 more)
config/: celery.py  conftest.py  middleware.py  secrets.py  urls.py
deploy/: nginx.conf
load_tests/: locustfile.py  requirements.txt
scripts/: backup.sh  restore.sh  setup.sh
skills/: README.md
templates/: base.html
(+134 files in other folders)
